# myochikirin_no_metropolis

./: .gitignore  README.md  index.html  novel_game_tauri_vue.code-workspace  package.json
release/: はじめに.txt
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/savedata/: savedata.json
src-tauri/src/: README.md  audio.rs  cmd.rs  main.rs
src/assets/css/: style.css
src/assets/fonts/Satsuki/: OFLicense.txt  readme_説明書.txt
src/assets/fonts/togoshi-gothic/: readme.html
src/components/: Base.vue  Content.vue  Gallery.vue  Home.vue  Menu.vue  Msg.vue  Navbar.vue  README.md  Settings.vue  Start.vue
src/components/Base/: Afterword.vue  Gallery.vue  Home.vue  Popup.vue  Settings.vue
src/components/Base/Gallery/: Images.vue
src/components/Base/Settings/: Credit.vue  System.vue
src/components/Gallery/: Images.vue  Music.vue
src/components/Settings/: Credit.vue  System.vue
src/mixins/: AppRef.js  AudioFunc.js  Images.js  MusicList.js  README.md  SaveData.js  ShortStories.js  Text.js
src/router/: index.js
