[package]
name = "myochikirin_no_metropolis"
version = "0.1.0"
description = "Game"
authors = [ "you" ]
license = ""
repository = ""
default-run = "myochikirin_no_metropolis"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11", features = [ "all-api" ] }
once_cell = "1.5.2"
rodio = "0.13.0"

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "myochikirin_no_metropolis"
path = "src/main.rs"
